- Add expires HTTP header. (some js must be force reloaded.)
- Increase http upload size to 512MB.
- Remove last slash of the path added by filechooser.
- Add wait_on and spindown.
- Upgrade e2fsprogs to 1.42.12.
- Upgrade bash 4.3 to patch 30.
- Upgrade transmission to 2.84.
- Upgrade isboot to 0.2.8.
- Upgrade istgt to 20141125.
- Upgrade smartmontools 6.3
- Upgrade xmlstarlet to 1.6.1.
- Upgrade inadyn-mt to 02.24.43.
- Upgrade zoneinfo to 2014j.
- Change iperf2.x for iperf3.
- Upgrade samba to 4.1.14.
- Upgrade php to 5.6.4.
- Upgrade mDNSResponder to 561.1.1.
- Upgrade xmd to 0.3.6.

Fixes:
- Missing usb device configuration file.
- Missing default pkg repository.
- mount_ntfs is not installed to /sbin.
- Wrong variable in HAST script.
- /boot/kernel/fuse.ko is missing.
- /etc/platform is broken on full installation.
- Some DHCP setting of WebGUI does not work. 
- xmlrpc is broken.
- Missing GPT partition in Disks|ZFS|Pools|Tools.
- Switching DHCP and static IP cause unexpected behavior.
- Some drives can't get disk model/description.
- The text on graph is not sized on Chrome.
- Firmware page show incorrectly.
- ntfs-3g is broken.
- Form size is too small on Chrome.
- HAST device is not imported by import disks.
- Stop flooding "Unknown USB device" to syslog.

Permanent restrictions:
- It is not possible to format a SoftRAID disk with MSDOS FAT16/32.
- It is not possible to encrypt a disk partition, only complete disks are supported.

Known bugs:
- If DHCP for IPv4 is used, the IPv6 statically configured DNS server will be
  overriden by the IPv4 DNS server.

NEED TESTING:
- IPv6: auto mode
- All services using IPv6 address (NFS, FTP, etc...)
- Netatalk VFS Samba module (automatically enabled when Netatalk starts) crashes
  samba when accessing to share
- Need to write an online-test procedure

Help needed:
- Need help for adding LDAP authentication feature:
  Main services can be easily authenticated using PAM-LDAP, but is harder for Samba.

